--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,6 +62,60 @@ services:
     depends_on:
       - central_db
 
+  su_db:
+    image: postgres:17.5
+    restart: always
+    env_file:
+      - path: ./subotica/.env
+    volumes:
+      - su-data:/var/lib/postgresql/data
+
+  su_server:
+    build:
+      context: subotica
+    env_file:
+      - path: ./subotica/.env
+    environment:
+      PORT: ${SU_SERVER_PORT}
+      CENTRAL_SERVER_PORT: ${CENTRAL_SERVER_PORT}
+    volumes:
+      - type: bind
+        source: ./subotica/app
+        target: /app
+        read_only: true
+    ports:
+      - "${SU_SERVER_PORT}:${SU_SERVER_PORT}"
+    depends_on:
+      - su_db
+
+
+  kg_db:
+    image: postgres:17.5
+    restart: always
+    env_file:
+      - path: ./kragujevac/.env
+    volumes:
+      - kg-data:/var/lib/postgresql/data
+
+  kg_server:
+    build:
+      context: kragujevac
+    env_file:
+      - path: ./kragujevac/.env
+    environment:
+      PORT: ${KG_SERVER_PORT}
+      CENTRAL_SERVER_PORT: ${CENTRAL_SERVER_PORT}
+    volumes:
+      - type: bind
+        source: ./kragujevac/app
+        target: /app
+        read_only: true
+    ports:
+      - "${KG_SERVER_PORT}:${KG_SERVER_PORT}"
+    depends_on:
+      - kg_db
 volumes:
   ns-data:
   central-data:
+  su-data:
+  kg-data:
