Remove redundant docker images

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 NS_SERVER_PORT=
 CENTRAL_SERVER_PORT=
+SU_SERVER_PORT=
+KG_SERVER_PORT=
+NS_PGPORT=
+NS_DB_HOST=
+SU_PGPORT=
+SU_DB_HOST=
+KG_PGPORT=
+KG_DB_HOST=
