--- a/.github/workflows/upload-image.yaml
+++ b/.github/workflows/upload-image.yaml
@@ -10,8 +10,8 @@ jobs:
       - uses: actions/checkout@v4.2.2
       - name: Docker login
         env:
-          DOCKER_USERNAME: {{ $secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: {{ $secrets.DOCKER_PASSWORD }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Build central image
         run: docker build ./central -t $DOCKER_USERNAME/cc-central:1
